REMOVING EVIL JAVA 21 THINGS SO I CAN RUN THE PROJECT!!11